compiler/testData/diagnostics/testsWithStdLib/varargs/kt3213.fir.kt
// !CHECK_TYPE

fun test(a: Array<out String>) {
    val b = a.toList()

    b checkType { <!UNRESOLVED_REFERENCE!>_<!><List<String>>() }
}